--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 |
             </div>
             <div class="icon">
-                <img src="C:\Users\Dell\OneDrive\Desktop\html\dominos\avatar.svg" width="33px" height="43">
+                <img src="avatar.svg" width="33px" height="43">
             </div>
             <div class="myaccount">
                 MY ACCOUNT
